lmao sis wont survive

--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<title>Document</title>
 </head>
 <body>
+	<div class="products">
+		<div>
+			<div class="btn">Arista Router</div>
+			<div class="btn">Cisco Router</div>
+			<div class="btn">Cisco Switch</div>
+			<div class="btn">Hp Server</div>
+			<div class="btn">Dell Server</div>
+			<div class="btn">Juniper Router</div>
+		</div>
+	</div>
+	<div id="chart"></div>
 	<script type="text/javascript" src="javascript/index.js"></script>
-	
 </body>
 </html>
