--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 	<div class="products">
 		<div>
-			<div class="btn">Arista Router</div>
-			<div class="btn">Cisco Router</div>
-			<div class="btn">Cisco Switch</div>
-			<div class="btn">Hp Server</div>
-			<div class="btn">Dell Server</div>
-			<div class="btn">Juniper Router</div>
+			<button class="btn" id="btn1">Arista Router</button>
+			<button class="btn" id="btn2">Cisco Router</button>
+			<button class="btn" id="btn3">Cisco Switch</button>
+			<button class="btn" id="btn4">Hp Server</button>
+			<button class="btn" id="btn5">Dell Server</button>
+			<button class="btn" id="btn6">Juniper Router</button>
 		</div>
 	</div>
 	<div id="chart"></div>
