--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="products">
-		<div>
-			<button class="btn" id="btn1">Arista Router</button>
-			<button class="btn" id="btn2">Cisco Router</button>
-			<button class="btn" id="btn3">Cisco Switch</button>
-			<button class="btn" id="btn4">Hp Server</button>
-			<button class="btn" id="btn5">Dell Server</button>
-			<button class="btn" id="btn6">Juniper Router</button>
+	<div class="main">
+		<div class="products">
+				<button class="btn" id="btn1">Arista Router</button>
+				<button class="btn" id="btn2">Cisco Router</button>
+				<button class="btn" id="btn3">Cisco Switch</button>
+				<button class="btn" id="btn4">Hp Server</button>
+				<button class="btn" id="btn5">Dell Server</button>
+				<button class="btn" id="btn6">Juniper Router</button>
 		</div>
+		<div id="chart"></div>
 	</div>
-	<div id="chart"></div>
 	<script type="text/javascript" src="javascript/index.js"></script>
 </body>
 </html>
